Begin form functionality, fix visibility issue, begin separating into modules

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ form {
 
 }
 
-#newItemForm {
+.hide {
     visibility: hidden;
 }
 
